# polymarket-arb-bot

./: Cargo.toml  config.json
.cargo/: config.toml
src/: config.rs  dashboard.rs  lib.rs  main.rs  models.rs  simulator.rs  trader.rs
