[package]
name = "polymarket_arb_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"

[[bin]]
name = "polymarket_arb_bot"
path = "src/main.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
